Closed
Bug 1636122
Opened 2 years ago
Closed 2 years ago
Crash in [@ rx::Clear11::clearFramebuffer]
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla78
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox75 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | + | fixed |
People
(Reporter: jcristau, Assigned: jgilbert)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-e7ff311f-0c62-4bf5-a8f1-16bde0200507.
Top 10 frames of crashing thread:
0 libglesv2.dll rx::Clear11::clearFramebuffer gfx/angle/checkout/src/libANGLE/renderer/d3d/d3d11/Clear11.cpp:525
1 libglesv2.dll rx::Framebuffer11::clearImpl gfx/angle/checkout/src/libANGLE/renderer/d3d/d3d11/Framebuffer11.cpp
2 libglesv2.dll rx::FramebufferD3D::clear gfx/angle/checkout/src/libANGLE/renderer/d3d/FramebufferD3D.cpp:104
3 libglesv2.dll gl::Framebuffer::clear gfx/angle/checkout/src/libANGLE/Framebuffer.cpp:1367
4 libglesv2.dll gl::Context::clear gfx/angle/checkout/src/libANGLE/Context.cpp:3645
5 xul.dll mozilla::gl::GLContext::raw_fClear gfx/gl/GLContext.h:891
6 xul.dll mozilla::WebGLContext::ValidateAndInitFB dom/canvas/WebGLContext.cpp:1304
7 xul.dll mozilla::WebGLContext::BindCurFBForDraw dom/canvas/WebGLContext.cpp:1319
8 xul.dll mozilla::ValidateDraw dom/canvas/WebGLContextDraw.cpp:332
9 xul.dll mozilla::WebGLContext::DrawArraysInstanced dom/canvas/WebGLContextDraw.cpp:639
This signature is newly showing up in nightly 20200507085231.
Reporter | ||
Comment 1•2 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/302c30b598b0ed12b212c19f86256723dd362835 landed in that nightly build and touched that code.
Flags: needinfo?(jgilbert)
Regressed by: 1633628
Updated•2 years ago
|
Has Regression Range: --- → yes
Comment 2•2 years ago
|
||
Yep, this is very likely to be caused by bug 1633628.
Comment 3•2 years ago
|
||
We probably just need a null check because I guess the blend state can be null (default)
Reporter | ||
Comment 4•2 years ago
|
||
Fixed by backout:
https://hg.mozilla.org/mozilla-central/rev/293d13ecf47e0f22b9c752366e2592d581d10e51
Status: NEW → RESOLVED
Closed: 2 years ago
Flags: needinfo?(jgilbert)
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Reporter | ||
Comment 5•2 years ago
|
||
This signature came back (at lower volume) after the new patch landed in bug 1633628.
Flags: needinfo?(jmuizelaar)
Updated•2 years ago
|
Comment 6•2 years ago
|
||
Fix is on it's way via https://github.com/mozilla/angle/commit/cd89eeb9d07465e1ca995e0f0c86c0a1ce1875c5
Flags: needinfo?(jmuizelaar)
Assignee | ||
Comment 7•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → jgilbert
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/040a6d3c401d [angle] Use deviceContext instead of deviceContext1. r=jrmuizel
Updated•2 years ago
|
tracking-firefox78:
--- → +
Comment 9•2 years ago
|
||
bugherder |
Status: REOPENED → RESOLVED
Closed: 2 years ago → 2 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•