Bug 1636122 - [angle] Use deviceContext instead of deviceContext1. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D74770